Fix: scSearch_results to overflow auto

--- a/src/sass/components/sc-search.sass
+++ b/src/sass/components/sc-search.sass
@@ -52,7 +52,7 @@ input.scSearch_form_input
   font-size: 14px
   line-height: 24px
   text-align: left
-  overflow: scroll
+  overflow: auto
 
 .scSearch_results_item
   position: relative
